--- a/node_server/package.json
+++ b/node_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "pubsub-ws": "^1.0.2",
     "ws": "^7.4.5"
   }
