--- a/node_server/package.json
+++ b/node_server/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "pubsub-ws": "^1.0.2",
+    "pubsub-ws": "file:dependencies/pubsub-ws",
     "ws": "^7.4.5"
   }
 }
