--- a/planetx-srv.yaml
+++ b/planetx-srv.yaml
@@ -22,6 +22,17 @@ spec:
          ports:
             - name: web
               containerPort: 8000
+         volumeMounts:
+         - name: px-cred-volume
+           mountPath: /usr/src/app/creds.json
+           subPath: creds.json
+       volumes:
+       - name: px-cred-volume
+         secret:
+           secretName: px-creds-json
+           items:
+           - key: creds.json
+             path: creds.json
 ---
 apiVersion: v1
 kind: Service
@@ -43,8 +54,8 @@ metadata:
    annotations:
       kubernetes.io/ingress.class: "nginx"
       nginx.ingress.kubernetes.io/ssl-redirect: "true"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
 spec:
    tls:
      - hosts:
