--- a/node_server/package.json
+++ b/node_server/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-lock": "^1.3.0",
+    "async-mutex": "^0.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
