--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "node_server/dependencies/pubsub-ws"]
 	path = node_server/dependencies/pubsub-ws
-	url = https://github.com/georgiashay/pubsub-ws
+	url = git@gitea.shaytech.net:georgiashay/pubsub-ws.git
