--- a/node_server/package.json
+++ b/node_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async-mutex": "^0.3.1",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
