--- a/node_server/package.json
+++ b/node_server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fanoutio/grip": "^3.0.5",
     "async-mutex": "^0.3.1",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
